# Apyrobo

./: .gitignore  API_STABILITY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  ROADMAP.md  pyproject.toml  run_tests.py
.github/ISSUE_TEMPLATE/: good-first-issues.md
.github/workflows/: ci.yml  integration.yml  (+2 more)
apyrobo/: README.md  __init__.py  __main__.py  audit.py  auth.py  cli.py  config.py  costmap.py  memory.py  moveit.py  nav2.py  observability.py  operations.py  persistence.py  run_tests.py  voice.py
docker/: .env.example  Dockerfile  Dockerfile.ci  Dockerfile.integration  docker-compose.ci.yml  docker-compose.yml  prometheus.yml
docs/: QUICKSTART.md  TURTLEBOT4.md  adapter_authoring.md  api_reference.md  architecture.md  deployment.md  pilot_quickstart.md  pilot_reference_stack.md  playground.html  video_tutorial.md
examples/: 01_hello_robot.py  02_custom_skill.py  03_fleet.py
k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service-lb.yaml  service.yaml
scripts/: bump_version.sh  clean_worktrees.sh  create_roadmap_issues.sh  launch.sh  preflight.py
skills/: scan_area.json
tests/: test_auth_coverage.py  test_cli_connect.py  test_cli_coverage.py  test_cli_diagnose.py  test_cli_doctor.py  test_cli_test_skill.py  test_confidence_coverage.py  test_config_coverage.py  test_config_toml.py  test_connection_resilience.py  test_core_adapters_coverage.py  test_costmap.py  test_dashboard_coverage.py  test_demonstrations.py  test_episodic_store.py  test_fleet_handoff.py  test_fleet_multisite.py  test_gazebo_improvements.py  test_handler_registry.py  test_health_monitor.py  test_inference_coverage.py  test_inference_edge.py  test_library_coverage.py  test_memory.py  test_moveit_adapter.py  test_moveit_new.py  test_nav2_adapter.py  test_nav2_new.py  test_observability_coverage.py  test_operations_coverage.py  test_package_extra.py  test_persistence_extra.py  test_persistence_sqlite.py  test_plan_cache.py  test_registry_coverage.py  test_ros2_bridge_mocked.py  test_ros2_subscribers_mocked.py  test_ros2_swarm_bus_mocked.py  test_rule_agent_patterns.py  test_safety_enforcer_extra.py  (+18 more)
(+188 files in other folders)
